fix: activity page data overflow viewheight

--- a/assets/css/_custom.css
+++ b/assets/css/_custom.css
@@ -141,7 +141,3 @@
 .-order-1 {
   order: -1;
 }
-
-.h-full-flex {
-  @apply h-full;
-}
